--- a/index.html
+++ b/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <title>Virtual Valentine's Day Card</title>
     <link rel="icon" href="resources/fav.png">
-    <!-- credit: https://www.iconarchive.com/show/love-is-in-the-web-icons-by-succodesign/heart-icon.html#google_vignette for favicon -->
-    <title>Valentines invitation</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/card.css">
 </head>
+
 <body>
-    <section>
-        <div class="video-background">
-            <video autoplay loop muted playsinline>
-                <source src="resources/heart.webm" type="video/webm"><!-- web for transparent background video -->
-                <!-- video credit: https://www.vecteezy.com/video/23346640-red-heart-shape-balloon-flying-up-animation-on-green-screen-background-love-balloon-flying-up-animated-chroma-key-video -->
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        <div class="container">
-            <div class="image-box">
-                <div class="actual-image">
-                    <img src="resources/cat-heart.gif" alt="gif" class="gif" id="gif">
-                    <!-- gif credit: https://tenor.com/view/heart-love-cat-kawaii-cute-gif-8446829684698946759 -->
-                </div>
-                <div class="text-one">
-                    <p style="font-size: 1.4rem;text-align: center;" id="text">will you be (name) valentine?❤️😘</p><!-- replace(name) with your desired name -->
+    <h1 class="valentine">Hello Love, please check out my Valentine's e-letter for you!</h1>
+    <div class="envelope-wrapper">
+        <div id="envelope" class="close">
+            <div class="front flap"></div>
+            <div class="front pocket"></div>
+            <div class="letter">
+                <div class="letter-content">
+                    <p>Hello my love ❤️</p>
+
+                    <p>
+                        From the very first moment we met, you brought something special into my life.
+                        Your smile brightens my darkest days.
+                    </p>
+
+                    <p>
+                        Every moment with you feels magical.
+                    </p>
+
+                    <p>
+                        I made this little virtual letter just for you.
+                    </p>
+
+                    <p>
+                        So today, and every day,
+                        I want to remind you how much I love you!
+                    </p>
+
+                    <p style="text-align:center; font-weight:bold; margin-top:20px;">
+                        Will you be my Valentine? 💖
+                    </p>
+
+                    <div class="reset">
+                        <button id="open">Continue</button>
+                    </div>
                 </div>
             </div>
-            <div class="yes-no">
-                <button class="yes" id="yes">Yes</button>
-                <button class="no" id="no">No</button>
-            </div>
+
+           <div class="hearts"></div>
         </div>
-    </section>
-    <script src="js/app.js"></script>
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
